--- a/10-rock-paper-scissors.css
+++ b/10-rock-paper-scissors.css
@@ -3,6 +3,7 @@ body{
     color: white;
     font-family: Arial;
     text-align: center;
+    align-items: center;
 }
 .title{
     font-size: 30px;
